# metadata-check

./: .gitignore  Dockerfile  README.md  action.yml  pyproject.toml  requirements.txt  validate_metadata.py
.github/workflows/: example.yml  push.yaml
scripts/: validate_metadata.py
