[project]
name = "biobrick-metadata-check"
version = "1.0.0"
description = "Validates BIOBRICK.yaml metadata files, verifies asset existence, and checks schema conformance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0.1",
    "pyarrow>=14.0.1",
    "jsonschema>=4.20.0",
]
